gcc/testsuite/rust/rustc/ui/const-generics/const-generic-default-wont-borrowck_dg.rs
//@ run-rustfix
pub struct X<const N: usize = {
    let s: &'static str; s.len() // { dg-error ".E0381." "" { target *-*-* } }
}>;

fn main() {}

